src/ui/sass/modules/_Card.scss
.yxt-Card {
  $cards-margin: $base-spacing / 2 !default;

  display: flex;
  flex-direction: column;
  min-width: 210px;

  border: $border-default;
  margin-right: $cards-margin;
  margin-bottom: $cards-margin;

  &-child {
    flex-grow: 1;
  }

  &--universal {
    margin-bottom: 0;
  }

  &--universal + &--universal {
    border-top: 0;
  }

  // hack: Add 1px left padding on IE11 so child elements
  // with background colors won't hide this elements border
  _:-ms-fullscreen, :root & {
    padding-left: 1px;
  }

  @media (max-width: $breakpoint-mobile-max) {
    margin-bottom: 0;
    & + & {
      border-top: 0;
    }
  }
}

.yxt-Results-items {
  > .yxt-Card {
    flex-basis: 100%;
    flex-grow: 1;
  }

  &--1 > .yxt-Card
  {
    margin-right: 0;
  }

  @media (min-width: $breakpoint-mobile-max) {

    &--2 > .yxt-Card {
      flex-basis: 45%;
    }

    &--3 > .yxt-Card {
      flex-basis: 30%;
    }

    &--4 > .yxt-Card {
      flex-basis: 22%;
    }
  }
}

